nextcloud/server.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  serviceName: nextcloud
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - name: nextcloud
          image: kvtodev/nextcloud:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: container-port
              containerPort: 80
          args: ["sh", "-c", "/cron.sh & exec apache2-foreground"]
          volumeMounts:
            - name: data
              mountPath: /var/www/html
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 32Gi

---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  ports:
    - name: service-port
      port: 80
      targetPort: container-port
  selector:
    app: nextcloud
